feat(DEN-2791): add per-event OTEL parity across SDKs